force-app/main/default/objects/Contrato_de_Servi_o__c/Contrato_de_Servi_o__c.object-meta.xml
<CustomObject>
    <label>Contrato de Serviço</label>
    <nameField>
        <label>Nome do Contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos de Serviços</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>