force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Assinatura__c.field-meta.xml
<CustomField>
    <fullName>Assinatura__c</fullName>
    <label>Assinatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DANIEL ALENCAR COELHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>