force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Calibra_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calibração</label>
    <type>Checkbox</type>
</CustomField>