force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cheklist_de_envio_assinada__c.field-meta.xml
<CustomField>
    <fullName>Cheklist_de_envio_assinada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheklist de envio assinada</label>
    <type>Checkbox</type>
</CustomField>