force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cl_usula_Primeira__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_Primeira__c</fullName>
    <label>Cláusula Primeira</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>