force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cl_usula_Primeira_Editada__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_Primeira_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cláusula Primeira Editada</label>
    <type>Checkbox</type>
</CustomField>