force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cl_usula_Quarta__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_Quarta__c</fullName>
    <label>Cláusula Quarta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>