force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cl_usulas_na_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Cl_usulas_na_Proposta__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cláusulas na Proposta</label>
    <type>Checkbox</type>
</CustomField>