force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Clausulas_Especiais_Editadas__c.field-meta.xml
<CustomField>
    <fullName>Clausulas_Especiais_Editadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausulas Especiais Editadas</label>
    <type>Checkbox</type>
</CustomField>