force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Locação</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>