force-app/main/default/objects/Contrato_de_Servi_o__c/fields/CNPJ_CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CLIENTE__c</fullName>
    <formula>Cliente__r.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Cliente</label>
    <type>Text</type>
</CustomField>