force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Conjuge_do_fiador__c.field-meta.xml
<CustomField>
    <fullName>Conjuge_do_fiador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cônjuge do fiador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Serviços (Cônjuge do fiador)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os5</relationshipName>
    <type>Lookup</type>
</CustomField>