force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Considera_es_Iniciais__c.field-meta.xml
<CustomField>
    <fullName>Considera_es_Iniciais__c</fullName>
    <label>Considerações Iniciais</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>