force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Contato_do_Locat_rio__c.field-meta.xml
<CustomField>
    <fullName>Contato_do_Locat_rio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato do Locatário</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviços</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>