force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Contrato_de_AltoFluxo__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_AltoFluxo__c</fullName>
    <label>Contrato de AltoFluxo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>