force-app/main/default/objects/Contrato_de_Servi_o__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <inlineHelpText>Este campo deve ser preenchido apenas quando o campo Contrato de Alto Fluxo for igual a &quot;SIM&quot;.</inlineHelpText>
    <label>CPF do Paciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>