force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Data_da_fase__c.field-meta.xml
<CustomField>
    <fullName>Data_da_fase__c</fullName>
    <label>Nesta fase desde</label>
    <type>DateTime</type>
</CustomField>