force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Data_de_Emiss_o_da_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Emiss_o_da_Proposta__c</fullName>
    <label>Data de Emissão da Proposta</label>
    <type>Date</type>
</CustomField>