force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Data_de_emiss_o_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_de_emiss_o_do_contrato__c</fullName>
    <label>Data de emissão do contrato</label>
    <type>Date</type>
</CustomField>