force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Data_de_T_rmino_do_Contrato_2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_T_rmino_do_Contrato_2__c</fullName>
    <formula>IF(ISPICKVAL(Tipo_da_Dura_o__c, &quot;mes(es)&quot;), ADDMONTHS(Data_de_In_cio_do_Contrato__c, (Dura_o_do_Contrato_meses__c +  Tempo_aditivado_meses__c)),

Data_de_In_cio_do_Contrato__c +  (Dura_o_do_Contrato_meses__c + Tempo_aditivado_meses__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Término do Contrato(2)</label>
    <type>Date</type>
</CustomField>