force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Data_de_T_rmino_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_de_T_rmino_do_Contrato__c</fullName>
    <label>Data de Término do Contrato</label>
    <type>Date</type>
</CustomField>