force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Documenta_o_de_aditivos_envio__c.field-meta.xml
<CustomField>
    <fullName>Documenta_o_de_aditivos_envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentação de Aditivos Envio</label>
    <type>Checkbox</type>
</CustomField>