force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Dura_o_do_Contrato_meses__c.field-meta.xml
<CustomField>
    <fullName>Dura_o_do_Contrato_meses__c</fullName>
    <label>Duração do Contrato</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>