force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Editar_Timbre__c.field-meta.xml
<CustomField>
    <fullName>Editar_Timbre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editar Timbre</label>
    <type>Checkbox</type>
</CustomField>