force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Emails_para_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Emails_para_faturamento__c</fullName>
    <label>Emails para faturamento</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>