force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>Locat_rio_a__r.ShippingStreet + &quot; &quot; +  Locat_rio_a__r.ShippingCity + &quot; &quot; + Locat_rio_a__r.ShippingState+ &quot; &quot; + &quot;CEP: &quot; +  Locat_rio_a__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Completo</label>
    <type>Text</type>
</CustomField>