force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Endere_o_Curto__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_Curto__c</fullName>
    <formula>UPPER(Cliente__r.ShippingCity + &quot; - &quot; + Cliente__r.ShippingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Curto</label>
    <type>Text</type>
</CustomField>