force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Endere_o_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_Hospital__c</fullName>
    <formula>Internado_no_Hospital__r.ShippingStreet + &quot; &quot; + Internado_no_Hospital__r.ShippingCity + &quot; &quot; + Internado_no_Hospital__r.ShippingState+ &quot; &quot; + &quot;CEP: &quot; + Internado_no_Hospital__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Hospital</label>
    <type>Text</type>
</CustomField>