force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Ensaio_de_Seguran_a_El_trica__c.field-meta.xml
<CustomField>
    <fullName>Ensaio_de_Seguran_a_El_trica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ensaio de Segurança Elétrica</label>
    <type>Checkbox</type>
</CustomField>