force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>Locat_rio_a__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado*</label>
    <type>Text</type>
</CustomField>