force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Estado_Locat_rio__c.field-meta.xml
<CustomField>
    <fullName>Estado_Locat_rio__c</fullName>
    <label>Estado (Locatário)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estados</valueSetName>
    </valueSet>
</CustomField>