force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>