force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Forma_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A VISTA</fullName>
            </value>
            <value>
                <fullName>BOLETO</fullName>
            </value>
            <value>
                <fullName>DEPÓSITO BANCÁRIO</fullName>
            </value>
            <value>
                <fullName>DEPÓSITO BANCÁRIO ANTECIPADO</fullName>
            </value>
            <value>
                <fullName>CARTÃO CRÉDITO/DÉBITO 1X</fullName>
            </value>
            <value>
                <fullName>CARTÃO CRÉDITO/DÉBITO 2X</fullName>
            </value>
            <value>
                <fullName>CARTÃO CRÉDITO/DÉBITO 3X</fullName>
            </value>
            <value>
                <fullName>CARTÃO CRÉDITO/DÉBITO 4X</fullName>
            </value>
            <value>
                <fullName>CARTÃO CRÉDITO/DÉBITO 5X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>