force-app/main/default/objects/Contrato_de_Servi_o__c/fields/ID_DMS__c.field-meta.xml
<CustomField>
    <fullName>ID_DMS__c</fullName>
    <label>ID DMS</label>
    <type>TextArea</type>
</CustomField>