force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Inicio_da_pendencia__c.field-meta.xml
<CustomField>
    <fullName>Inicio_da_pendencia__c</fullName>
    <label>Início da pendência</label>
    <type>DateTime</type>
</CustomField>