force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Internado_no_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Internado_no_Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Este campo deve ser preenchido apenas quando o campo Contrato de Alto Fluxo for igual a &quot;SIM&quot;.</inlineHelpText>
    <label>Internado no Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Serviços (Internado no Hospital)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os3</relationshipName>
    <type>Lookup</type>
</CustomField>