force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Itens_de_aditivos_entregues__c.field-meta.xml
<CustomField>
    <fullName>Itens_de_aditivos_entregues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Itens de aditivos entregues</label>
    <type>Checkbox</type>
</CustomField>