force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <formula>Locat_rio_a__r.Key_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>