force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Locador_a__c.field-meta.xml
<CustomField>
    <fullName>Locador_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locador(a)/Contratada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Serviços (Locador(a))</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os1</relationshipName>
    <type>Lookup</type>
</CustomField>