force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Local_de_assinatura__c.field-meta.xml
<CustomField>
    <fullName>Local_de_assinatura__c</fullName>
    <label>Local de assinatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>