force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Locat_rio_a__c.field-meta.xml
<CustomField>
    <fullName>Locat_rio_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locatário(a)/Contratante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Locação</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os2</relationshipName>
    <type>Lookup</type>
</CustomField>