force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Manut_Corretiva_Apenas_Mao_de_Obra__c.field-meta.xml
<CustomField>
    <fullName>Manut_Corretiva_Apenas_Mao_de_Obra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manut. Corretiva (Apenas Mão de Obra)</label>
    <type>Checkbox</type>
</CustomField>