force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Manut_Corretiva_Mao_de_Obra_e_Pecas__c.field-meta.xml
<CustomField>
    <fullName>Manut_Corretiva_Mao_de_Obra_e_Pecas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manut. Corretiva (Mão de Obra e Peças)</label>
    <type>Checkbox</type>
</CustomField>