force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Manut_Preventiva_Apenas_Mao_de_Obra__c.field-meta.xml
<CustomField>
    <fullName>Manut_Preventiva_Apenas_Mao_de_Obra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manut Preventiva (Apenas Mão de Obra)</label>
    <type>Checkbox</type>
</CustomField>