force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status_do_Contrato__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACOMPANHAMENTO</fullName>
            </value>
            <value>
                <fullName>AQUISIÇÃO/COMODATO</fullName>
            </value>
            <value>
                <fullName>AQUISIÇÃO DE EQUIPAMENTOS</fullName>
            </value>
            <value>
                <fullName>ESTOQUE</fullName>
            </value>
            <value>
                <fullName>FALTA DE ANÁLISE TÉCNICA</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO EMERGENCIAL</fullName>
            </value>
            <value>
                <fullName>MUDANÇA DE GESTÃO DO CONTRATO</fullName>
            </value>
            <value>
                <fullName>NÃO AUTORIZADO</fullName>
            </value>
            <value>
                <fullName>NÃO MANIFESTA MAIS O INTERESSE</fullName>
            </value>
            <value>
                <fullName>PERDA DE PRAZO PARA CADASTRO</fullName>
            </value>
            <value>
                <fullName>PREÇO</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>SEM INTERESSE DE RENOVAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>