force-app/main/default/objects/Contrato_de_Servi_o__c/fields/N_de_Aditivos__c.field-meta.xml
<CustomField>
    <fullName>N_de_Aditivos__c</fullName>
    <label>N° de Aditivos</label>
    <summaryFilterItems>
        <field>Aditivos_Contratuais__c.Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </summaryFilterItems>
    <summaryForeignKey>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>