force-app/main/default/objects/Contrato_de_Servi_o__c/fields/N_mero_da_Proposta_Contrato__c.field-meta.xml
<CustomField>
    <fullName>N_mero_da_Proposta_Contrato__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Número da Proposta/Contrato</label>
    <type>AutoNumber</type>
</CustomField>