force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Nome_Testemunha01__c.field-meta.xml
<CustomField>
    <fullName>Nome_Testemunha01__c</fullName>
    <label>Nome Testemunha 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>