force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Nota_de_retorno_assinada__c.field-meta.xml
<CustomField>
    <fullName>Nota_de_retorno_assinada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nota de retorno assinada</label>
    <type>Checkbox</type>
</CustomField>