force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Numero_de_parcelas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_parcelas__c</fullName>
    <label>Número de parcelas</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>