force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Observa_es_da_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_da_Proposta__c</fullName>
    <label>Observações da Proposta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>