force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos de Serviços</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>