force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Pendencia_envio_e_retorno__c.field-meta.xml
<CustomField>
    <fullName>Pendencia_envio_e_retorno__c</fullName>
    <formula>OR(
    NOT(Cheklist_de_retorno_assinada__c),
    NOT(Documenta_o_de_Aditivos_Retorno__c),
    NOT(Itens_de_aditivos_retorno__c),
    NOT(Nota_de_retorno_assinada__c),
    NOT(Transfer_ncia_de_envio_e_retorno__c),
    NOT(Itens_de_aditivos_entregues__c),
    NOT(Cheklist_de_envio_assinada__c),
    NOT(Documenta_o_de_aditivos_envio__c),
    NOT(Nota_de_envio_assinada__c),
    NOT(Transfer_ncia_de_aditivo_de_envio__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pendencia envio e retorno</label>
    <type>Checkbox</type>
</CustomField>