force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Periodo_atual__c.field-meta.xml
<CustomField>
    <fullName>Periodo_atual__c</fullName>
    <formula>IF(MONTH(TODAY())=12, DATE(YEAR(TODAY()),12,31), DATE(YEAR(TODAY()),MONTH(TODAY())+1, 1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período atual</label>
    <type>Date</type>
</CustomField>