force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Pesq_Satisfacao_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Pesq_Satisfacao_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pesquisa de Satisfação Enviada</label>
    <type>Checkbox</type>
</CustomField>