force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Primeiro_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_faturamento__c</fullName>
    <label>Data do primeiro faturamento</label>
    <type>Date</type>
</CustomField>