force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Proposta_Contrato_Global__c.field-meta.xml
<CustomField>
    <fullName>Proposta_Contrato_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposta/Contrato (Global)</label>
    <type>Checkbox</type>
</CustomField>