force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Propriedade_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Propriedade_da_conta__c</fullName>
    <formula>TEXT(Cliente__r.Ownership)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propriedade da conta</label>
    <type>Text</type>
</CustomField>