force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Qualifica_o__c.field-meta.xml
<CustomField>
    <fullName>Qualifica_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualificação</label>
    <type>Checkbox</type>
</CustomField>