force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Quantidade_de_Ativos_no_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Ativos_no_Contrato__c</fullName>
    <label>Quantidade de Ativos no Contrato</label>
    <summaryFilterItems>
        <field>Ativos_do_Contrato__c.Equipamento_no_Cliente__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ativos_do_Contrato__c.Contrato_de_Servico__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>