force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Quantidade_de_Pedidos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Pedidos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade de Pedidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>