force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Recebimento_via_empenho__c.field-meta.xml
<CustomField>
    <fullName>Recebimento_via_empenho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recebimento via empenho?</label>
    <type>Checkbox</type>
</CustomField>