force-app/main/default/objects/Contrato_de_Servi_o__c/fields/RG_Testemunha_01__c.field-meta.xml
<CustomField>
    <fullName>RG_Testemunha_01__c</fullName>
    <label>RG Testemunha 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>