force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Saldo_a_Faturar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_Faturar__c</fullName>
    <formula>Valor_Periodico_do_Contrato_Atual__c *  Tempo_restante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a Faturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>