force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Saldo_a_Faturar_novo__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_Faturar_novo__c</fullName>
    <label>Saldo a Faturar (novo)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>