force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Situa_o_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Situa_o_do_contrato__c</fullName>
    <formula>IF(
Data_de_T_rmino_do_Contrato_2__c &lt; TODAY(), 
    &quot;VENCIDO&quot;,
    IF(
     Data_de_T_rmino_do_Contrato_2__c &lt;= TODAY() + 30, 
    &quot;A VENCER EM 30 DIAS&quot;,
    IF(
        Data_de_T_rmino_do_Contrato_2__c &lt;= TODAY() + 60, 
        &quot;A VENCER EM 60 DIAS&quot;,
        IF(
            AND(
                Fase__c = &quot;null&quot;, 
                OR(
                    ISNULL(Data_de_T_rmino_do_Contrato_2__c), 
                    ISNULL(Dura_o_do_Contrato_meses__c)
                )
            ), 
            &quot;ERRO&quot;,
            &quot;VIGENTE&quot;
        )
    )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação do contrato</label>
    <type>Text</type>
</CustomField>